[package]
name = "cocaine-http-proxy"
version = "0.1.0"
authors = ["Evgeny Safronov <division494@gmail.com>"]

[dependencies]
byteorder = "1"
num_cpus = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_yaml = "0.7"

log = "0.3"
net2 = "0.2"
rand = "0.3"
time = "0.1"
futures = "0.1"
itertools = "0.5"
uuid = { version = "0.4", features = ["v4"] }

tokio-core = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"

hyper = { git = "https://github.com/hyperium/hyper" }

cocaine = { path = "../cocaine-framework-rust" }
rmp-serde = "0.13.1"
rmpv = { version = "0.4", features = ["with-serde"] }

clap = "~2.20.5"
console = "0.3"

[profile.dev]
panic = "abort"

[profile.release]
debug = true
panic = "abort"
