[package]
name = "cocaine-http-proxy"
version = "0.3.8"
authors = ["Evgeny Safronov <division494@gmail.com>"]
license = "MIT"
description = "HTTP proxy for Cocaine APE Cloud"
homepage = "https://github.com/cocaine/cocaine-http-proxy"
repository = "https://github.com/cocaine/cocaine-http-proxy"

[dependencies]
byteorder = "1"
clap = "~2.20.5"
jsonrpc-core = "7"
num_cpus = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_yaml = "0.7"

libc = "0.2"
log = "0.3"
net2 = "0.2"
rand = "0.3"
time = "0.1"
futures = "0.1"
itertools = "0.5"
uuid = { version = "0.4", features = ["v4"] }
tokio-core = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
tokio-uds = "0.1"
# Temporary until zero-sized-chunk-problem lands in crates.io.
hyper = { git = "https://github.com/hyperium/hyper", rev = "fc5b9cce3176776e4c916cd1b907b1649a538f00" }
regex = "0.2"

# Temporary for deep debugging.
#slog = "1.4"
#slog-term = "1.3"
#slog-stdlog = "1.1"
#slog-envlogger = "0.5"

cocaine = "0.5.3"
rmp-serde = "0.13.3"
rmpv = { version = "0.4", features = ["with-serde"] }

[profile.dev]
panic = "abort"

[profile.release]
debug = true
panic = "abort"

[package.metadata.deb]
maintainer = "Evgeny Safronov <division494@gmail.com>"
copyright = "2017, Evgeny Safronov <division494@gmail.com>"
license_file = ["LICENSE", "4"]
extended_description = """An entry point for the Cocaine APE Cloud
Terminates HTTP trafic, allowing to call Cocaine applications and services."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/cocaine-http-proxy", "usr/bin/", "755"],
]
